# pressure-test-platform

./: .gitignore  CHANGELOG.md  FAQ.md  KEYWORDS.md  LICENSE  PROBLEM_ARCHIVE.md  PROJECT_MAP.md  README.md  STATUS.md  user_rules.md  压测平台介绍.md  学习指南.md  推广文章.md
backend_admin_python/: .gitignore  DATABASE_SETUP.md  README.md  SETUP_GUIDE.md  __init__.py  add_default_users.py  check_admin_account.py  check_apply_records.py  check_backend_status.py  init_db.py  list_users.py  requirements.txt  reset_admin_password.py  setup.cfg  setup.py  start_app.py  test_apply_list.py  test_logger.py
backend_admin_python/app/: __init__.py  database.py  main.py
backend_admin_python/app/api/: __init__.py
backend_admin_python/app/api/apply/: __init__.py  router.py
backend_admin_python/app/api/auth/: __init__.py  router.py
backend_admin_python/app/api/reports/: __init__.py  router.py
backend_admin_python/app/api/tasks/: __init__.py  router.py
backend_admin_python/app/api/users/: __init__.py  router.py
backend_admin_python/app/models/: __init__.py  apply_task.py  feedback.py  report.py  result.py  task.py  task_log.py  user.py
backend_admin_python/app/services/: __init__.py  apply_service.py  report_service.py  task_service.py  user_service.py
backend_admin_python/app/utils/: __init__.py  auth.py  background_tasks.py  logger.py  middleware.py  report_generator.py  validators.py
backend_admin_python/config/: __init__.py  settings.py
backend_admin_python/report_module/: __init__.py  image_generator.py  pdf_generator.py
backend_admin_python/tests/: test_api_all.py
(+79 files in other folders)
