[metadata]
name = pressure-test-platform
version = 1.0.0
description = 压测报告生成工具，用于生成Web系统压测结果的可视化报告
author = Your Name
author_email = your.email@example.com
url = https://github.com/siYuanJun/pressure-test-platform
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Flask
    Topic :: System :: Monitoring
    Topic :: Utilities

[options]
python_requires = >=3.7
install_requires = 
    -r requirements.txt
packages = find:
include_package_data = true

[options.package_data]
* = *.py

[entry_points]
console_scripts = 
    generate-report = images:main

[flake8]
extend-ignore = E203, W503
max-line-length = 100
